feat: replace thread pool with virtual thread executor, refactor logging, and improve timeouts for cluster sync and REST clients